<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/place_details_cl"
    tools:context="com.mhetrerajat.backpacker.Activity.PlaceDetailsActivity">

    <include layout="@layout/appbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="top|center"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="1dp"
                app:cardCornerRadius="4dp"
                app:contentPadding="10dp"
                android:id="@+id/place_details_cv">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="40dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:id="@+id/place_details_name"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorMediumDark"
                        android:id="@+id/place_details_vicinity"
                        android:layout_below="@+id/place_details_name"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/place_details_vicinity"
                        android:id="@+id/place_details_phone"
                        android:textStyle="bold"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/place_details_phone"
                        android:layout_marginTop="5dp"
                        android:id="@+id/place_details_rating_layout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/place_details_rating"
                            android:layout_marginEnd="10dp"
                            android:textStyle="bold"
                            android:layout_marginRight="10dp" />

                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            style="?android:attr/ratingBarStyleSmall"
                            android:id="@+id/place_details_rating_bar"
                            android:layout_toRightOf="@+id/place_details_rating"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/place_details_rating_layout">

                        <Button
                            android:id="@+id/place_details_website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/visit_website"
                            android:background="@android:color/transparent"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_marginEnd="15dp"
                            android:layout_marginRight="15dp" />

                        <Button
                            android:id="@+id/place_details_favourite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mark_as_favourite"
                            android:background="@android:color/transparent"
                            style="?android:attr/buttonStyleSmall"
                            android:textColor="@color/RED_COLOR_600" />

                    </LinearLayout>


                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/place_details_photos_rv_layout"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/photos"
                    android:id="@+id/place_details_photos_header"
                    android:layout_marginBottom="5dp"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/place_details_photos_rv">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/place_details_photos_error"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:text="@string/oops_no_photos_are_available"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/place_details_reviews_rv_layout"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/reviews"
                    android:id="@+id/place_details_reviews_header"
                    android:layout_marginBottom="5dp"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/place_details_reviews_rv">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/place_details_reviews_error"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:text="@string/oops_no_reviews_are_available"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
