<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tourist_menu_layout"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tourist_menu_sights_cv"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/sight_menu"
                    android:maxHeight="48dp"
                    android:id="@+id/tourist_menu_sights_iv"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tourist_menu_sights_tv"
                    android:text="@string/sights"
                    android:layout_below="@+id/tourist_menu_sights_iv"
                    android:textAlignment="center"
                    android:textSize="18sp"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tourist_menu_restaurants_cv"
            app:contentPadding="5dp"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/restaurant_menu"
                    android:maxHeight="48dp"
                    android:id="@+id/tourist_menu_restaurants_iv"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tourist_menu_restaurants_tv"
                    android:text="@string/restaurants"
                    android:textAlignment="center"
                    android:layout_below="@+id/tourist_menu_restaurants_iv"
                    android:textSize="18sp"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tourist_menu_hotels_cv"
            app:contentPadding="5dp"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/hotel_menu"
                    android:maxHeight="48dp"
                    android:id="@+id/tourist_menu_hotels_iv"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tourist_menu_hotels_tv"
                    android:text="@string/hotels"
                    android:layout_below="@+id/tourist_menu_hotels_iv"
                    android:textAlignment="center"
                    android:textSize="18sp"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tourist_menu_drink_cv"
            app:contentPadding="5dp"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:src="@drawable/bar_menu"
                        android:maxHeight="48dp"
                        android:id="@+id/tourist_menu_drink_iv" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tourist_menu_drink_tv"
                        android:text="@string/drink"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:layout_below="@+id/tourist_menu_drink_iv"
                        />

                </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tourist_menu_shopping_cv"
            app:contentPadding="5dp"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/shop_menu"
                    android:maxHeight="48dp"
                    android:id="@+id/tourist_menu_shopping_iv"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tourist_menu_shopping_tv"
                    android:text="@string/shopping"
                    android:textAlignment="center"
                    android:layout_below="@+id/tourist_menu_shopping_iv"
                    android:textSize="18sp"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="5dp"
            android:id="@+id/tourist_menu_club_cv"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/club_menu"
                    android:maxHeight="48dp"
                    android:id="@+id/tourist_menu_club_iv"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tourist_menu_club_tv"
                    android:text="@string/night_club"
                    android:textAlignment="center"
                    android:layout_below="@id/tourist_menu_club_iv"
                    android:textSize="18sp"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</LinearLayout>